--- a/src/ng-vcl/token/token-input.component.html
+++ b/src/ng-vcl/token/token-input.component.html
@@ -2,7 +2,7 @@
   <wormhole *ngIf="labelPre" [connect]="labelPre"></wormhole>
   <vcl-token *ngFor="let token of tokens"
              (remove)="removeToken(token)"
-             (tap)="select(token)"
+             (click)="select(token)"
              [disabled]="disabled"
              [ngClass]="tokenClass"
              [selected]="token.selected"
