--- a/src/ng-vcl/date-picker/date-picker.component.html
+++ b/src/ng-vcl/date-picker/date-picker.component.html
@@ -7,7 +7,7 @@
                 <div class="vclIcon fa fa-angle-left" aria-hidden="false" aria-label="previous" role="img"></div>
               </div>
             </button>
-        <span class="vclCalHeaderLabel" (tap)="showYear()" [class.date-picker-pointer]="!showYearPick">
+        <span class="vclCalHeaderLabel" (click)="showYear()" [class.date-picker-pointer]="!showYearPick">
           {{viewDate?.getMonthString()}}&nbsp;&nbsp;{{viewDate?.getYearString()}}
         </span>
         <button type="button" class="vclButton vclTransparent vclSquare" [disabled]="disabled" (click)="nextMonth()">
@@ -35,7 +35,7 @@
       <div *ngIf="displayWeekNumbers && week.length==7" class="vclDGCell">
         {{week[5].getWeekNumber()}}
       </div>
-      <div *ngFor="let day of week" class="vclDGCell vclCalItem" [class.vclDisabled]="disabled || isDayDisabled(day)" [class.vclOtherMonth]="!day.isSameMonthAndYear(viewDate)" [class.vclSelected]="isMarked(day)" (tap)="onDateTap(day)" [class.vclToday]="highlightSelected && day.isToday()">
+      <div *ngFor="let day of week" class="vclDGCell vclCalItem" [class.vclDisabled]="disabled || isDayDisabled(day)" [class.vclOtherMonth]="!day.isSameMonthAndYear(viewDate)" [class.vclSelected]="isMarked(day)" (click)="onDateTap(day)" [class.vclToday]="highlightSelected && day.isToday()">
         {{day.date.getDate()}}
       </div>
     </div>
@@ -43,12 +43,12 @@
     <div *ngIf="displayJumpSelected || displayJumpToday" class="vclDGRow">
       <div class="vclDGCell">
         <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified" role="menubar" aria-level="2">
-          <button *ngIf="displayJumpToday" type="button" title="go to today" class="vclButton vclTransparent vclLayoutFlex" [disabled]="disabled" (tap)="gotoToday()">
+          <button *ngIf="displayJumpToday" type="button" title="go to today" class="vclButton vclTransparent vclLayoutFlex" [disabled]="disabled" (click)="gotoToday()">
             <div class=" vclIcogram">
               <span class="vclText ">go to today</span>
             </div>
           </button>
-          <button *ngIf="displayJumpSelected" type="button" title="go to selected" class="vclButton vclTransparent vclLayoutFlex" [disabled]="disabled" (tap)="gotoSelected()">
+          <button *ngIf="displayJumpSelected" type="button" title="go to selected" class="vclButton vclTransparent vclLayoutFlex" [disabled]="disabled" (click)="gotoSelected()">
             <div class=" vclIcogram">
               <span class="vclText ">go to selected</span>
             </div>
