token: add icon support + bugfixes/optimizations

--- a/demo/src/demos/token/demo.component.html
+++ b/demo/src/demos/token/demo.component.html
@@ -2,7 +2,7 @@
 <vcl-token label="my token"></vcl-token>
 <vcl-token label="my selected token" [selected]="true"></vcl-token>
 <vcl-token label="my removable token" [removable]="true" (remove)="onRemove($event)"></vcl-token>
-<vcl-token label="my icon token" tokenIcon="fa:cog" [removable]="true" (remove)="onRemove($event)"></vcl-token>
+<vcl-token label="my icon token" [removable]="true" (remove)="onRemove($event)"></vcl-token>
 
 <br/>
 
