--- a/src/ng-vcl/token/token-input.component.html
+++ b/src/ng-vcl/token/token-input.component.html
@@ -3,6 +3,7 @@
   <vcl-token *ngFor="let token of tokens"
              (remove)="removeToken(token)"
              (click)="select(token)"
+             [tokenIcon]="token.tokenIcon"
              [disabled]="disabled"
              [ngClass]="tokenClass"
              [selected]="token.selected"
