--- a/src/ng-vcl/token/token.component.html
+++ b/src/ng-vcl/token/token.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="tokenIcon" vcl-icogram [appIcon]="tokenIcon" ></div>
 <span class="vclTokenLabel">{{label}}</span>
 <button vcl-button
         [disabled]="isDisabled"
