month-picker adding README file, adding vclNoMargin class && minor type fix

--- a/src/ng-vcl/month-picker/month-picker.component.html
+++ b/src/ng-vcl/month-picker/month-picker.component.html
@@ -1,5 +1,5 @@
 <div class="vclDatePicker">
-  <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput"
+  <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput vclNoMargin"
     [attr.role]="'grid'"
     [attr.tabindex]="tabindex"
     [attr.aria-multiselectable]="maxSelectableMonths > 1"
