vcl-input-control-group updating documentation

--- a/demo/src/demos/input-control-group/demo.component.html
+++ b/demo/src/demos/input-control-group/demo.component.html
@@ -1,3 +1,5 @@
+<h3>Input control group</h3>
+
 <vcl-input-control-group [type]="type" [label]="label">
-  <input  vcl-input type="text" />
+  <input vcl-input type="text" />
 </vcl-input-control-group>
