vcl-input-control-group updating demo $$ docs

--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -118,3 +118,14 @@ code.hljs
 .jsoneditor-frame input
   min-height: 0.5em !important
 // json-editor
+
+.vclFormControlHint
+  &.vclError
+    color: #ff0000
+    font-weight: bold
+  &.vclWarning
+    color: #ffaa00
+    font-weight: bold
+  &.vclSuccess
+    color: #00aa00
+    font-weight: bold
