--- a/demo/src/demos/input-control-group/demo.component.html
+++ b/demo/src/demos/input-control-group/demo.component.html
@@ -1,5 +1,21 @@
 <h3>Input control group</h3>
 
+<p>Follow the instructions in the <b style="color: #ff0000;">RED</b> message and see how it changes.</p>
+
 <vcl-input-control-group [type]="type" [label]="label">
-  <input vcl-input type="text" />
+  <fieldset class="vclFieldset">
+
+    <label class="vclFormControlLabel vclFormControlLabelWrapping">Email
+      <input vcl-input type="email" [(ngModel)]="email" (keyup)="update()" />
+    </label>
+
+    <label class="vclFormControlLabel vclFormControlLabelWrapping">Password
+      <input vcl-input type="password" [(ngModel)]="password1" (keyup)="update()" />
+    </label>
+
+    <label class="vclFormControlLabel vclFormControlLabelWrapping">Repeat password
+      <input vcl-input type="password" [(ngModel)]="password2" (keyup)="update()" />
+    </label>
+
+  </fieldset>
 </vcl-input-control-group>
