--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -120,12 +120,18 @@ code.hljs
 // json-editor
 
 .vclFormControlHint
+  margin-top: 1em
+  padding: 1em
+  border-radius: 4px
   &.vclError
+    background-color: #ffbbbb
     color: #ff0000
     font-weight: bold
   &.vclWarning
+    background-color: #ffdd44
     color: #ffaa00
     font-weight: bold
   &.vclSuccess
+    background-color: #00dd00
     color: #00aa00
     font-weight: bold
