--- a/src/ng-vcl/navigation/navigation.component.html
+++ b/src/ng-vcl/navigation/navigation.component.html
@@ -1,37 +1,37 @@
-  <ul [class.vclLayoutHorizontal]="type === 'horizontal'">
-    <li *ngFor="let item of navigationItems"
-        [class.vclSelected]="item.selectable && item.selected"
-        [class.vclOpen]="item.opened"
-        [class.vclClose]="!item.opened"
-        [class.vclNavigationHeading]="item.heading"
-        [class.vclNavigationItem]="!item.heading"
-        [attr.aria-selected]="item.selectable && item.selected"
-        [attr.role]="item.heading && 'sectionhead' || ariaRole"
-        [attr.tabindex]="tabindex"
-        [ngClass]="item.class"
-        (mouseover)="mouseOver(item)"
-        >
+<ul [class.vclLayoutHorizontal]="type === 'horizontal'">
+  <li *ngFor="let item of navigationItems"
+      [class.vclSelected]="item.selectable && item.selected"
+      [class.vclOpen]="item.opened"
+      [class.vclClose]="!item.opened"
+      [class.vclNavigationHeading]="item.heading"
+      [class.vclNavigationItem]="!item.heading"
+      [attr.aria-selected]="item.selectable && item.selected"
+      [attr.role]="item.heading && 'sectionhead' || ariaRole"
+      [attr.tabindex]="tabindex"
+      [ngClass]="item.class"
+      (mouseleave)="mouseLeave(item)"
+      (mouseover)="mouseOver(item)">
 
       <span *ngIf="item.heading">
         {{item.label}}
       </span>
 
-      <a vcl-link class="vclNavigationItemLabel"
-        *ngIf="!item.heading"
-        [label]="item.label"
-        [prepIcon]="item.calcPrepIcon"
-        [appIcon]="item.calcAppIcon"
-        (click)="selectItem(item)">
-      </a>
+    <a vcl-link class="vclNavigationItemLabel"
+       *ngIf="!item.heading"
+       [label]="item.label"
+       [prepIcon]="item.calcPrepIcon"
+       [appIcon]="item.calcAppIcon"
+       (click)="selectItem(item)">
+    </a>
 
-      <nav vcl-navigation *ngIf="item.items && item.items.length > 0"
-          [inputItems]="item.items"
-          [type]="type"
-          [useRouter]="useRouter"
-          [subLevelHintIconOpened]="subLevelHintIconOpened"
-          [subLevelHintIconClosed]="subLevelHintIconClosed"
-          [subLevelHintIconSide]="subLevelHintIconSide"
-          (select)="onSubItemSelect($event)">
-      </nav>
-    </li>
-  </ul>
+    <nav vcl-navigation *ngIf="item.items && item.items.length > 0"
+         [inputItems]="item.items"
+         [type]="type"
+         [useRouter]="useRouter"
+         [subLevelHintIconOpened]="subLevelHintIconOpened"
+         [subLevelHintIconClosed]="subLevelHintIconClosed"
+         [subLevelHintIconSide]="subLevelHintIconSide"
+         (select)="onSubItemSelect($event)">
+    </nav>
+  </li>
+</ul>
