Add showActive to navigation item

--- a/src/ng-vcl/navigation/navigation.component.html
+++ b/src/ng-vcl/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <ul [class.vclLayoutHorizontal]="type === 'horizontal'">
   <li *ngFor="let item of navigationItems"
-      [class.vclSelected]="item.selectable && item.selected"
+      [class.vclSelected]="(item.showActive || item.selectable) && item.selected"
       [class.vclOpen]="item.opened"
       [class.vclClose]="!item.opened"
       [class.vclNavigationHeading]="item.heading"
