demo: fix scrollable content area in FF

--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -74,6 +74,9 @@ header
 .docEditDemoButton
   float: right
 
+.vclContentArea
+  overflow: hidden
+
 code.hljs
   white-space: inherit
 
@@ -118,6 +121,7 @@ code.hljs
 .jsoneditor-frame input
   min-height: 0.5em !important
 // json-editor
+
 
 .vclFormControlHint
   margin-top: 1em
