--- a/src/ng-vcl/tour/tour.component.html
+++ b/src/ng-vcl/tour/tour.component.html
@@ -22,7 +22,7 @@
       <button vcl-button *ngIf="hasNext"
         class="{{ hint?.options?.buttonClass }}"
         [label]="hint.options.nextLabel"
-        [prepIcon]="hint.options.nextIcon"
+        [appIcon]="hint.options.nextIcon"
         (click)="next()">
       </button>
 
