[tour]: up, refactoring;

--- a/demo/src/demos/tour/demo.component.html
+++ b/demo/src/demos/tour/demo.component.html
@@ -37,16 +37,12 @@
     </vcl-tour-step>
 
     <vcl-tour-step 
-        target="#heading2"
-        [debug]="debugTour"
-        [debugPopover]="debugPopover">
+        target="#heading2">
             Demo tour second step no title
     </vcl-tour-step>
     
     <vcl-tour-step
         target="#heading3"
-        [debug]="debugTour"
-        [debugPopover]="debugPopover"
         [targetX]="AttachmentX.Center"
         [attachmentX]="AttachmentX.Center"
         [targetY]="AttachmentY.Top"
@@ -56,8 +52,6 @@
 
     <vcl-tour-step
         target="#heading4"
-        [debug]="debugTour"
-        [debugPopover]="debugPopover"
         [targetX]="AttachmentX.Left"
         [attachmentX]="AttachmentX.Right"
         [targetY]="AttachmentY.Center"
@@ -67,8 +61,6 @@
 
     <vcl-tour-step
         target="#heading2"
-        [debug]="debugTour"
-        [debugPopover]="debugPopover"
         [targetX]="AttachmentX.Right"
         [attachmentX]="AttachmentX.Left"
         [targetY]="AttachmentY.Center"
