--- a/src/ng-vcl/tour/tour.component.html
+++ b/src/ng-vcl/tour/tour.component.html
@@ -6,7 +6,7 @@
   [attachmentX]="attachmentX"
   [targetY]="targetY"
   [attachmentY]="attachmentY"
-  [style.z-index]="20">
+  [style.z-index]="tour.options?.zIndex">
 
   <div class="vclTourContainer">
 
