[tour, tour.service]: add offsetAttachmentX, offsetAttachmentY; [popover]: refactor, update README.md;

--- a/demo/src/demos/tour/demo.component.html
+++ b/demo/src/demos/tour/demo.component.html
@@ -37,8 +37,9 @@
     </vcl-tour-step>
 
     <vcl-tour-step 
-        target="#heading2">
-            Demo tour second step no title
+        target="#heading2"
+        [offsetAttachmentY]="50">
+            Demo tour second step no title with Y offset
     </vcl-tour-step>
     
     <vcl-tour-step
