--- a/src/ng-vcl/tour/tour.component.html
+++ b/src/ng-vcl/tour/tour.component.html
@@ -4,8 +4,10 @@
   [target]="target"
   [targetX]="targetX"
   [attachmentX]="attachmentX"
+  [offsetAttachmentX]="offsetAttachmentX"
   [targetY]="targetY"
   [attachmentY]="attachmentY"
+  [offsetAttachmentY]="offsetAttachmentY"
   [style.z-index]="tour.options?.zIndex">
 
   <div class="vclTourContainer">
