up @vcl/core-modules, @vcl/font-awesome (font-awesome  v 5)

--- a/demo/src/components/app/app.component.html
+++ b/demo/src/components/app/app.component.html
@@ -7,7 +7,7 @@
       </a>
     </div>
     <div><a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
-      <span class="vclIcon fa fa-github fa-3x"></span> </a>
+      <span class="vclIcon fab fa-github fa-3x"></span> </a>
     </div>
   </header>
   <div class="vclContentArea vclLayoutFlex vclLayoutHorizontal">
