--- a/demo/src/demos/link/demo.component.html
+++ b/demo/src/demos/link/demo.component.html
@@ -10,7 +10,7 @@
 <a vcl-link
   href="'https://github.com/ng-vcl/ng-vcl'"
   [label]="'Example external Link'"
-  [appIcon]="'fa:external-link'"
+  [appIcon]="'fa:external-link-alt'"
   target="'_blank'"></a>
 <br><br>
 
