Support custom components in JSS, add Date to JSS

--- a/src/ng-vcl/input-control-group/input-control-group.component.html
+++ b/src/ng-vcl/input-control-group/input-control-group.component.html
@@ -1,6 +1,6 @@
 <ng-content></ng-content>
 
-<div *ngIf="type!==null && label!==null && label!==''" class="vclFormControlHint"
+<div *ngIf="type && label && label!==''" class="vclFormControlHint"
   [class.vclError]="type=='error'"
   [class.vclWarning]="type=='warning'"
   [class.vclSuccess]="type=='success'">
