toolbar: up fontawesome cdn version

--- a/demo/src/demos/toolbar/demo.component.html
+++ b/demo/src/demos/toolbar/demo.component.html
@@ -1,4 +1,4 @@
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 <h2>Features</h2>
 
@@ -37,8 +37,8 @@ Multiple level toolbars can be provided using <code>ariaLevel</code> attribute. 
   </div>
 
   <div class="vclLayoutHorizontal vclLayoutCenter">
-    <button vcl-button class="vclTransparent" appIcon="fa:refresh"></button>
-    <button vcl-button class="vclTransparent" appIcon="fa:plus"></button>
+    <button vcl-button class="vclTransparent" appIcon="fa:user"></button>
+    <button vcl-button class="vclTransparent" appIcon="fas fa-plus"></button>
   </div>
 </vcl-toolbar>
 <br><br>
@@ -47,5 +47,5 @@ Multiple level toolbars can be provided using <code>ariaLevel</code> attribute. 
 <vcl-toolbar [ariaLevel]="2" class="vclLayoutCenter">
   <button vcl-button class="vclTransparent" appIcon="fa:navicon"></button>
   <div>Level 2 Toolbar Title</div>
-  <button vcl-button class="vclTransparent" appIcon="fa:plus"></button>
+  <button vcl-button class="vclTransparent" appIcon="fas fa-plus"></button>
 </vcl-toolbar>
