--- a/src/ng-vcl/date-picker/date-picker.component.html
+++ b/src/ng-vcl/date-picker/date-picker.component.html
@@ -5,7 +5,7 @@
         <div class=" vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
           <button type="button" class="vclButton vclTransparent vclSquare" [disabled]="disabled" (click)="prevMonth()">
                 <div class="vclIcogram">
-                  <div class="vclIcon fa fa-angle-left" aria-hidden="false" aria-label="previous" role="img"></div>
+                  <div class="vclIcon fas fa-angle-left" aria-hidden="false" aria-label="previous" role="img"></div>
                 </div>
               </button>
           <span class="vclCalHeaderLabel" (click)="showYear()" [class.date-picker-pointer]="!showYearPick">
@@ -13,7 +13,7 @@
           </span>
             <button type="button" class="vclButton vclTransparent vclSquare" [disabled]="disabled" (click)="nextMonth()">
               <div class="vclIcogram">
-                <div class="vclIcon fa fa-angle-right" aria-hidden="false" aria-label="next" role="img"></div>
+                <div class="vclIcon fas fa-angle-right" aria-hidden="false" aria-label="next" role="img"></div>
               </div>
             </button>
           </div>
